# Useful_habit_tracker.

./: .coveragerc  .env.sample  .flake8  README.md  celerybeat-schedule.db  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt
config/: settings.py  urls.py
useful_habits/: models.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  valiators.py  views.py
useful_habits/migrations/: 0001_initial.py  0002_remove_feeling_action_datetime_feeling_action_time.py  0003_alter_feeling_action_time_and_more.py  0004_remove_feeling_nice_feeling_habit_nice_feeling_and_more.py  0005_habit_last_completed_habit_periodicity_and_more.py  0006_remove_habit_user_habit_owner_and_more.py  0007_remove_feeling_is_public_habit_is_public_and_more.py  0008_alter_feeling_action_time.py  0009_remove_feeling_action_time.py  0010_remove_habit_nice_feeling_remove_habit_periodicity_and_more.py
users/: models.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_city_user_phone_alter_user_email_and_more.py  0003_alter_user_password.py  0004_alter_user_password.py  0005_alter_user_first_name_alter_user_last_name_and_more.py  0006_alter_user_phone.py  0007_user_telegram_chat_id.py  0008_remove_user_username.py  0009_alter_user_telegram_chat_id.py  0010_alter_user_telegram_chat_id.py  0011_alter_user_telegram_chat_id.py
